--- a/audio/audio/templates/upload.html
+++ b/audio/audio/templates/upload.html
@@ -10,12 +10,6 @@
   {{ dropzone.create(action='upload') }}
   {{ dropzone.load_js() }}
   {{ dropzone.config() }}
-  <audio controls src="{{ url_for('static', filename= 'elephone.mp3') }}"></audio>
-
-
-<!--  <audio src="{{url_for('.dispaly_file',filename=filename)}}" controls></audio>-->
-<!--  {% if filename %}-->
-<!--  {% endif %}-->
-
+  <audio controls src="{{ url_for('.display_file', filename= filename) }}"></audio>
 </body>
 </html>
