画面遷移のlinkを追加

--- a/audio/audio/templates/display.html
+++ b/audio/audio/templates/display.html
@@ -13,5 +13,6 @@
     <audio controls src="{{ url_for('send_file', filename= audio_name) }}"></audio>
 </div>
 {% endfor %}
+<p><a href="/upload">Back to upload</a></p>
 </body>
 </html>
