--- a/audio/audio/templates/upload.html
+++ b/audio/audio/templates/upload.html
@@ -10,5 +10,6 @@
   {{ dropzone.create(action='upload') }}
   {{ dropzone.load_js() }}
   {{ dropzone.config() }}
+<p><a href="/display">Upoad data display</a></p>
 </body>
 </html>
