毎回複数upload_fileだけを表示(session利用)

--- a/audio/audio/templates/upload.html
+++ b/audio/audio/templates/upload.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   {{ dropzone.create(action='upload') }}
+  <button id="upload">Upload</button>
   {{ dropzone.load_js() }}
   {{ dropzone.config() }}
-<p><a href="/display">Upoad data display</a></p>
 </body>
 </html>
