--- a/audio/audio/templates/display.html
+++ b/audio/audio/templates/display.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<hr>
-
-<!--{{audio_names}}-->
-<hr>
-{% for audio_name in audio_names %}
-<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-    <audio controls src="{{ url_for('send_file', filename= audio_name) }}"></audio>
+<body>
+{% if session.filenames %}
+{% for filename in session.filenames %}
+    <audio controls src="{{ url_for('send_file', filename= filename) }}"></audio>
     <p>predict</p>
-    <p>true_label</p>
-</div>
+    <p>true_label:{{filename}}</p>
 {% endfor %}
-<p><a href="/upload">Back to upload</a></p>
+{% endif %}
 </body>
 </html>
