real_time_recoderを実装

--- a/audio/audio/templates/display.html
+++ b/audio/audio/templates/display.html
@@ -12,6 +12,7 @@
     <p>true_label:{{filename}}</p>
 {% endfor %}
 {% endif %}
-<a href="{{url_for('display_all')}}">display_all</a>
+<img src="{{ url_for('static', filename='gif/cat.gif') }}">
+<a href="{{url_for('display_all')}}">Display_all</a>
 </body>
 </html>
