--- a/audio/audio/templates/upload.html
+++ b/audio/audio/templates/upload.html
@@ -11,5 +11,7 @@
   <button id="upload">Upload</button>
   {{ dropzone.load_js() }}
   {{ dropzone.config() }}
+
+<a href="{{url_for('recoder')}}">Real_time_audio_recoder</a>
 </body>
 </html>
